2003-08-22  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-EPL-N1600.xml, printer/Epson-EPL-N1600PS.xml,
	  printer/HP-LaserJet_5.xml, printer/HP-LaserJet_5Si.xml,
	  printer/HP-LaserJet_6.xml, printer/Xerox-DocuPrint_N4512.xml,
	  printer/Xerox-DocuPrint_P1202.xml: Removed "lj5gray" as
	  recommended driver, it is too slow. Used "hpijs" instead
	  (these printers do only 600 dpi anyway).

	* printer/Epson-EPL-N1600.xml, drivers/ljet4.xml,
	  drivers/lj5gray.xml, drivers/lj5mono.xml: The Epson EPL-N1600 is
	  a 600-dpi PCL-5e printer, it works with "ljet4" and "hpijs", not
	  with "lj5gray"/"lj5mono". Corrected resolution of Epson
	  EPL-N1600.

	* drivers/ljet4.xml: Added missing Epson laser printers.
	
2003-08-13  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1050.xml: Updated text.

	* printer/Samsung-ML-1250.xml, driver/pxlmono.xml,
	  driver/lj5gray.xml, driver/lj5mono.xml, driver/lj4dith.xml,
	  driver/ljet4.xml.xml, opt/160.xml: Added Samsung ML-1250.

	* driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono.xml: Fixed
	  bug of using "Brother ML-1850e" instead of "Brother ML-1850" in
	  the printer lists.
	
2003-08-11  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Apple-LaserWriter_Pro_630.xml: Added additional comments
	  from Duncan Gibb.

2003-08-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Brother-HL-1435.xml, printer/Brother-HL-1430.xml,
	  printer/Brother-HL-1230.xml, printer/Brother-HL-1240.xml,
	  printer/Brother-HL-7050N.xml, printer/Brother-HL-7050.xml,
	  printer/Brother-HL-1850.xml, printer/Brother-HL-1870N.xml,
	  printer/Brother-HL-1470N.xml, printer/Brother-HL-2460N.xml,
	  printer/Brother-HL-1650.xml, printer/Brother-HL-1670N.xml,
	  printer/Brother-HL-2460.xml, printer/Brother-HL-3260N.xml,
	  printer/Brother-HL-3400CN.xml, printer/Brother-HL-2600CN.xml,
	  printer/Brother-HL-3450CN.xml, printer/Brother-HL-4000CN.xml,
	  driver/Postscript.xml, driver/hl1250.xml, driver/ljet4.xml,