@@ -884,6 +884,11 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <make>Epson</make>
+      <model>EPL-N1600PS</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <make>DEC</make>
       <model>LN17</model>
       <arg_defval>na</arg_defval>
