@@ -3,8 +3,9 @@
 	* printer/Epson-EPL-N1600.xml, printer/Epson-EPL-N1600PS.xml,
 	  printer/HP-LaserJet_5.xml, printer/HP-LaserJet_5Si.xml,
 	  printer/HP-LaserJet_6.xml, printer/Xerox-DocuPrint_N4512.xml,
-	  printer/Xerox-DocuPrint_P1202.xml: Removed "lj5gray" as
-	  recommended driver, it is too slow. Used "hpijs" instead
+	  printer/Xerox-DocuPrint_P1202.xml,
+	  opt/Postscript-Resolution.xml: Removed "lj5gray" as recommended
+	  driver, it is too slow. Used "hpijs" instead
 	  (these printers do only 600 dpi anyway).
 
 	* printer/Epson-EPL-N1600.xml, drivers/ljet4.xml,
